# nep21-playground

./: .gitignore  Cargo.toml  README.md
token/: Cargo.toml  deploy.js  package-lock.json  package.json
token/src/: lib.rs
