[package]
name = "nep21-token"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
borsh = "*"

near-sdk = { git = "https://github.com/zeropoolnetwork/near-sdk-rs", branch="feature/alt_bn128", module="near-sdk"}
wee_alloc = { version = "0.4.5", default-features = false, features = [] }


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for fast computations.
opt-level = 3
lto = true
debug = false
panic = "abort"
